# hydra

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  local-build.ps1  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml
docs/: README.md  banner.pdn
nowires/: CMakeLists.txt  README.md  bt.cpp  bt.h  btstack_config.h  device.gatt  hid.cpp  hid.h  httpd.cpp  httpd.h  lwipopts.h  main.cpp  model.h
nowires/content/: index.html  index.shtml  status.shtml
pico/: CMakeLists.txt  README.md  binary_serial.h  bt.cpp  dashboard.cpp  dashboard.h  device.gatt  hid.cpp  hid.h  httpd.cpp  log.cpp  log.h  main.cpp  model.h  websocket.cpp  websocket.h
pico/content/: index.html
win/: CMakeLists.txt  dongle.cpp  dongle.h  global.h  hid.cpp  hid.h  hydra.rc  ipkm.rc  machine.cpp  machine.h  main.cpp  model.h  resource.h
win/ui/: control.cpp  control.h
win/util/: perf.h
